--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -14,3 +14,6 @@
 @import 'new.scss';
 @import 'cgu.scss';
 @import 'localize.scss';
+@import 'selected.scss';
+@import 'cat-list.scss';
+@import 'register.scss';
