--- a/assets/styles/displaylost.scss
+++ b/assets/styles/displaylost.scss
@@ -15,4 +15,16 @@
         margin: 0.5rem;
         height: 600px;
     }
+
+    #no-cat-lost {
+        height: 400px;
+        width: auto;
+        border-radius: 50%;
+    }
+
+}
+
+.info {
+    text-align: center;
+    margin: 1rem;
 }
