--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Article{% endblock %}
-
+{% block title %} {{ parent() }} - Edition article{% endblock %}
 {% block body %}
     <h1>Edit Article</h1>
 
