--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Article{% endblock %}
+{% block title %} {{ parent() }} - Nouvel article{% endblock %}
 
 {% block body %}
 <section class="article-crud">
