--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article{% endblock %}
+{% block title %} {{ parent() }} - Détail article{% endblock %}
 
 {% block body %}
 <section class="article-crud">
