--- a/templates/cat/displaychoice.html.twig
+++ b/templates/cat/displaychoice.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
 {% block title %}Hello CatController!{% endblock %}
 
@@ -48,4 +48,4 @@
 {# <script src="https://maps.googleapis.com/maps/api/js?
 key=AIzaSyAJaDs8GhvKgIfGrMyp4D924YCoTryGgn0&library=places
 &callback=initAutocomplete" async defer></script> #}
-{% endblock %}
+{% endblock %} #}
