--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,22 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %} {{ parent() }} - Enregistrement{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
+<section class="article-crud">
+    {% for flash_error in app.flashes('Erreur dans la vérification du courriel') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-
-    <h1>Register</h1>
+<section class="article-crud">
+    <h3 class="crud-theme-title">Enregistrement d'un nouvel utilisateur</h3>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.pseudo) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+        {{ form_label(registrationForm.pseudo, 'Pseudo :', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(registrationForm.pseudo, {'attr': {'class': 'form-control'}}) }}
+        {{ form_label(registrationForm.email, 'Email :', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+        {{ form_label(registrationForm.plainPassword, 'Mot de passe :', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+        <br>
         {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+        <div class="center">
+            <button type="submit" class="btn btn-success">Enregistrez-vous</button>
+        </div>
     {{ form_end(registrationForm) }}
+</section>
 {% endblock %}
