--- a/templates/report/index.html.twig
+++ b/templates/report/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ReportController!{% endblock %}
+{% block title %} {{ parent() }} - Signalement{% endblock %}
 
 {% block body %}
 <style>
