--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -30,3 +30,19 @@ body {
     font-style: normal;
     src: url('/assets/fonts/Montserrat-SemiBold.ttf');
 }
+
+a:hover {
+    color: var(--background-color);
+    transform: scale(1.1);
+    text-decoration: underline;
+}
+
+#icone {
+    font-size: 40px;
+    color: grey;
+}
+
+#icone:hover {
+    color: grey;
+    transform: scale(1.1);
+}
