--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -25,20 +25,20 @@
 
     .alert {
         padding: 0 2rem;
+        margin: 1rem 0.5rem;
+
     }
 
     .article {
-        height: 500px;
         min-width: 250px;
-        margin: 0 0.5rem;
+        margin: 0.5rem 0.5rem;
         box-shadow: 1px 2px 4px darkgrey;
-        border-top-right-radius: 5px;
-        border-top-left-radius: 5px;
+        border-radius: 10px;
         padding: 0.5rem;
         background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0.7));
     }
     .article-picture {
-        height: 200px;
+        height: 300px;
         width: 100%;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
@@ -47,23 +47,22 @@
 
     .article-picture-background {
         width: 100%;
+        height: 300px;
     }
 
     .article-title {
         font-size: 1rem;
         margin: 0.5em 0;
-        height: 60px;
+        height: 40px;
         background: transparent;
     }
 
     .article-text {
         text-align:justify;
-        height: 100px;
-        display: -webkit-box; 
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow:ellipsis;
+    }
+
+    .btn {
+        margin: 1rem;
     }
 
     img {
@@ -107,10 +106,11 @@
     }
 
     .card {
+        height: 300px;
         max-width: 400px;
         min-width: 200px;
         margin: 0.5em;
-        border-radius: 5px;
+        border-radius: 10px;
         box-shadow: 0px 2px 3px grey;
         display: flex;
         flex-direction: row;
@@ -134,11 +134,10 @@
 
     .cat-picture {
         width: 180px;
-        height: 200px;
+        height: 300px;
         object-fit: cover;
-        margin-top: 1rem;
-        border-radius: 5px;
-        border: 3px solid var(--text-color);
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
     }
 
     .cat-name {
@@ -155,6 +154,14 @@
         padding: 2rem 0;
         
     } 
+
+    .ellipsis {
+        display: -webkit-box; 
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow:ellipsis;
+    }
 
     .gallery {
        /*  height: 100vh; */
@@ -230,12 +237,17 @@
         position: relative;
     }
 
+    #icone {
+        height: 30px;
+        width: 30px;
+    }
     #isLost {
         font-size: 2rem;
         color: #413d3d;
         margin: 0 1rem;
     }
     #item1 {
+        padding-top: 1.3rem;
         width: 100%;
         position: sticky;
         top: 60px;
@@ -243,6 +255,7 @@
         border-bottom: 0.4px solid white;
     }
     #item2 {
+        padding-top: 1.3rem;
         width: 100%;
         position: sticky;
         top: 120px;
@@ -250,6 +263,7 @@
         border-bottom: 0.4px solid white;
     }
     #item3 {
+        padding-top: 1.3rem;
         width: 100%;
         position: sticky;
         top: 180px;
@@ -257,6 +271,7 @@
         border-bottom: 0.4px solid white;
     }
     #item4 {
+        padding-top: 1.3rem;
         width: 100%;
         position: sticky;
         top: 240px;
@@ -265,6 +280,10 @@
     
     .localize {
         margin: 0.5rem;
+    }
+
+    #localize {
+        margin: 1rem;
     }
 
     #popup-bg {
@@ -311,17 +330,53 @@
         height: auto;
     }
 
+    .search {
+        width: 280px;
+    }
+
+    .search-btns {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+    }
+
     .seemore {
-        color: blue;
-        text-align: right;
+        min-width: fit-content;
+        height: 2rem;
+        margin: 1rem auto;
+        padding: 0 1.5rem;
+        font-weight: 400;
+        font-size: 1rem;
+        box-shadow: 0px 2px 4px rgb(216, 213, 213);
+        border-radius: 4rem;
+        background: transparent;
+        color: var(--main-color);
+        text-align: center;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        opacity: 100%;
+        border: none;
+    }   
+        
+    .seemore:hover {
+        transform: scale(1.1);
+        box-shadow: 0px 2px 4px rgb(101, 101, 101);
     }
 
     .slick-arrow {
-        height: 70px;
-        width: 70px;
-        background-color: rgb(129, 157, 209, 0.7);
+        height: 60px;
+        width: 60px;
+        background-color: rgb(129, 157, 209, 0.4);
         border-radius: 50%;
         z-index: 3;
+    }
+
+    .slick-prev:before, .slick-next:before {
+        font-size: 50px;
     }
 
     .slick-prev {
@@ -334,7 +389,6 @@
     }
 
     .slider {
-        background-color: rgb(129, 157, 209);
         padding-top: 2rem;
         padding-bottom: 2rem;
     }
@@ -380,3 +434,4 @@
 70% { transform: rotate(0deg) scale(1.2); }
 100% { transform: scale(1); }
 }
+
