--- a/templates/cat/coord.html.twig
+++ b/templates/cat/coord.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
 {% block title %}Hello CatController!{% endblock %}
 
@@ -21,4 +21,4 @@ function showPosition(position)
   }
 </script>
 
-{% endblock %}
+{% endblock %} #}
