--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,11 +1,7 @@
-<h1>Hi! Please confirm your email!</h1>
-
-<p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
-</p>
-
-<p>
-    Cheers!
-</p>
+{# This is the confirmation email sent after each registration #}
+<h1>Bonjour !</h1>
+<p>Vous venez de vous inscrire sur l'application Minou.</p>
+<p>Merci de bien vouloir confirmer votre adresse mail en cliquant sur le lien suivant:</p><br>
+<a href="{{ signedUrl }}">Confirm my Email</a>.
+<p> Attention, ce lien expire dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.</p>
+<p>Merci !</p>
