--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -4,7 +4,8 @@
         <div class="dropdown">
                 <button>Administrer</button>
                 <div class="content">
-                    <a href="{{ path('new-article') }}">Articles</a>
+                    <a href="{{ path('app_article_index') }}">Articles</a>
+                    <a href="{{ path('app_breed_index') }}">Races</a>
                     <a href="">Utilisateurs</a>
                 </div>
         </div>
