--- a/assets/styles/displaylost.scss
+++ b/assets/styles/displaylost.scss
@@ -7,19 +7,53 @@
     }
     .cat-picture {
         width: 100%;
-        height: 400px;
+        height: 300px;
         object-fit: cover;
     }
 
     .card {
         margin: 0.5rem;
-        height: 600px;
+        height: 500px;
+        border-radius:10px;
+        position: relative;
+        box-shadow: 0px 3px 4px grey;
+    }
+
+    .lost-date {
+        margin: 1rem;
+    }
+
+    .lost-details {
+        margin: 1rem;
+    }
+
+    .lost-signal {
+        position: absolute;
+        left: 40%;
+        top: 350px;
+    }
+
+    .lost-btn {
+        width: 200px;
+        height: 50px;
+        border-radius: 30px;
+        line-height: 30px;
+    }
+
+    .lost-btn:hover {
+        text-decoration: none;
     }
 
     #no-cat-lost {
         height: 400px;
         width: auto;
         border-radius: 50%;
+    }
+
+    .catname {
+        font-size: 2rem;
+        margin-left: 0.5rem;
+        margin-top: 1rem;
     }
 
 }
