--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -22,7 +22,7 @@
     #cat-connexion-picture {
         width: 100%;
         height: 400px;
-        background:linear-gradient(to bottom, rgba(14, 14, 245, 1), 30%, rgba(14, 14, 245, 0)), url("/public/pictures/cat-blue-eyes.webp");
+        background:linear-gradient(to bottom, rgb(245, 245, 245, 0), 80%, rgb(245, 245, 245, 1)), url("/public/pictures/cat-blue-eyes.webp");
         object-fit:cover;
         object-position: center;
         overflow: hidden;
