--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,8 +9,7 @@
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
         {# Script for maxbox js #}
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
-        {# <script src="https://code.jquery.com/jquery-3.6.0.js"</script> #}
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
