--- a/templates/cat/displaylost.html.twig
+++ b/templates/cat/displaylost.html.twig
@@ -34,13 +34,13 @@
     {% for cat in cats %}
         <div class="card">
             <div class="topcard">
-                <p><strong>{{ cat.name }}</strong></p>
-                <p>Déclaré perdu :<br>{{ cat.datelost ? cat.datelost|date('Y-m-d H:i:s') : '' }}</p>
+                <p class="catname"><strong>{{ cat.name }}</strong></p>
+                <p class="lost-date">Déclaré perdu :<br>{{ cat.datelost ? cat.datelost|date('d-m-Y') : '' }}</p>
             </div>
             <img class="cat-picture" src="/pictures/{{ cat.picture }}"</img>
-            <p>Signes distinctifs :<br> {{ cat.details }}</p>
-            <div class="center">
-            <a href="{{ path("report", {"cat_id": cat.id }) }}" class="btn btn-warning">Signaler</a>
+            <p class="lost-details">Signes distinctifs :<br> {{ cat.details }}</p>
+            <div class="center lost-signal">
+            <a href="{{ path("report", {"cat_id": cat.id }) }}" class="btn btn-warning lost-btn">Signaler</a>
             </div>
         </div>
     {% endfor %}
